<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:padding="5dp"
        android:background="#202020">

        <com.csc413.group2.tender.ProportionalImageView
            android:id="@+id/restaurant_image"
            android:src="@mipmap/default_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:layout_gravity="center_vertical" />



    <ImageView
    android:layout_width="401dp"
    android:layout_height="160dp"
    android:id="@+id/list_shadow"
    android:src="@drawable/list_shadow"
    android:adjustViewBounds="true"
    android:scaleType="fitCenter"
        android:layout_gravity="bottom" />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/restaurant_name"
            android:textSize="16dp"
            android:typeface="monospace"/>

    </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <!-- Stars image -->

            <ImageView
                android:id="@+id/restaurant_rating_image"
                android:layout_width="100dp"
                android:layout_height="15dp"
                android:src="@mipmap/stars_small_4"
                android:layout_marginRight="-15dp" />

            <!-- Distance container - view to bottom -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom"
                >

                <!-- Distance -->

                <TextView
                    android:id="@+id/restaurant_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff0e9a00"
                    android:textStyle="bold"
                    android:text="@string/restaurant_status"
                    android:textSize="12dp"
                    android:typeface="monospace"
                    android:layout_gravity="right" />

                <TextView
                    android:id="@+id/restaurant_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/restaurant_hours"
                    android:textSize="12dp"
                    android:typeface="monospace"
                    android:layout_gravity="right" />

                <TextView
                    android:id="@+id/restaurant_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_distance"
                    android:textColor="#ffffff"
                    android:layout_gravity="bottom|right" />

                <TextView
                        android:id="@+id/restaurant_street"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="@string/restaurant_street"
                        android:textSize="13dp"
                        android:typeface="monospace"
                    android:layout_gravity="right" />

                <TextView
                    android:id="@+id/restaurant_city_state_zip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/restaurant_city_state_zip"
                    android:textSize="12dp"
                    android:typeface="monospace"
                    android:layout_gravity="right" />

            </LinearLayout>

        </LinearLayout>

</FrameLayout>

